--- a/lab2/pom.xml
+++ b/lab2/pom.xml
@@ -28,5 +28,10 @@
       <version>1.18.28</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-base</artifactId>
+      <version>21</version>
+    </dependency>
   </dependencies>
 </project>
